Fix collapse indicators

--- a/app/webapp/static/css/style.css
+++ b/app/webapp/static/css/style.css
@@ -218,6 +218,10 @@ button {
 }
 
 .collapsible-header.collapsed .collapse-indicator {
+    transform: rotate(90deg);
+}
+
+.collapsible-header.expanded .collapse-indicator {
     transform: rotate(-90deg);
 }
 
